--- a/docker/Makefile
+++ b/docker/Makefile
@@ -4,7 +4,7 @@ IMAGE_NAME ?= imx93-builder
 
 build:
 	@echo "Checking for qemu-user-static (required for ARM64 emulation on x64 host)..."
-	@which qemu-aarch64 >/dev/null 2>&1 || (echo "qemu-user-static not found. Install with: sudo apt-get install qemu-user-static binfmt-support && sudo update-binfmts --enable qemu-aarch64" && exit 1)
+	@which qemu-aarch64 >/dev/null 2>&1 || (echo "Installing qemu-user-static..." && sudo apt-get update && sudo apt-get install -y qemu-user-static binfmt-support && sudo update-binfmts --enable qemu-aarch64)
 	@echo "Building Docker image $(IMAGE_NAME) for FRDM-IMX93..."
 	docker build --platform linux/arm64 --build-arg UID=$(shell id -u) --build-arg GID=$(shell id -g) -t $(IMAGE_NAME) .
 
